# 6.006-algo-practice

./: README.md  pyproject.toml
peak-finding/: mountain_peak.py  test_mountain_peak.py
