[tool.poetry]
name = "6.006-algo-practice"
version = "0.1.0"
description = ""
authors = ["anand2312 <anandkrishna2312@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
